# delta-sharing-client-rs

./: Cargo.toml  LICENSE
src/: client.rs  error.rs  lib.rs  profile.rs
src/request/: body.rs  mod.rs  pagination.rs  query.rs
src/response/: delta.rs  mod.rs  parquet.rs
