[package]
name = "delta-sharing-client-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.80"
chrono = { version = "0.4.38", features = ["serde"] }
delta-kernel = { git = "https://github.com/tdikland/delta-kernel-rs.git", rev = "fb8bbf0", package = "delta_kernel" }
http = "1.1.0"
reqwest = { version = "0.12.4", features = ["json"] }
serde = { version = "1.0.198", features = ["derive"] }
serde_json = "1.0.116"
tracing = "0.1.40"
url = "2.5.0"

[dev-dependencies]
tempfile = "3.10.1"
tokio = { version = "1.37.0", features = ["full"] }
